logs/frigg-runner.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.11.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-4.1.dist-info'...
Listing './lib/python3.5/site-packages/frigg_coverage'...
Listing './lib/python3.5/site-packages/frigg_coverage/parsers'...
Listing './lib/python3.5/site-packages/frigg_coverage-1.2.0.dist-info'...
Listing './lib/python3.5/site-packages/frigg_runner'...
Listing './lib/python3.5/site-packages/frigg_runner-1.2.1.dist-info'...
Listing './lib/python3.5/site-packages/frigg_settings'...
Listing './lib/python3.5/site-packages/frigg_settings-1.1.1.dist-info'...
Listing './lib/python3.5/site-packages/frigg_test_discovery-1.4.1.dist-info'...
Listing './lib/python3.5/site-packages/invoke'...
Listing './lib/python3.5/site-packages/invoke/parser'...
Listing './lib/python3.5/site-packages/invoke/vendor'...
Listing './lib/python3.5/site-packages/invoke/vendor/fluidity'...
Listing './lib/python3.5/site-packages/invoke/vendor/lexicon'...
Listing './lib/python3.5/site-packages/invoke/vendor/yaml2'...
Compiling './lib/python3.5/site-packages/invoke/vendor/yaml2/constructor.py'...
***   File "./lib/python3.5/site-packages/invoke/vendor/yaml2/constructor.py", line 130
    except TypeError, exc:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/invoke/vendor/yaml2/reader.py'...
***   File "./lib/python3.5/site-packages/invoke/vendor/yaml2/reader.py", line 158
    except UnicodeDecodeError, exc:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/invoke/vendor/yaml2/resolver.py'...
***   File "./lib/python3.5/site-packages/invoke/vendor/yaml2/resolver.py", line 171
    re.compile(ur'''^(?:yes|Yes|YES|no|No|NO
                    |true|True|TRUE|false|False|FALSE
                    |on|On|ON|off|Off|OFF)$''', re.X),
                                            
                                                     
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/invoke/vendor/yaml2/scanner.py'...
***   File "./lib/python3.5/site-packages/invoke/vendor/yaml2/scanner.py", line 1427
    except UnicodeDecodeError, exc:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/invoke/vendor/yaml3'...
Listing './lib/python3.5/site-packages/invoke-0.10.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
